client: update mouse position on enter

Otherwise cursor position is not correctly set after a wl_pointer enter
event.

Fixes: QTBUG-133204
Pick-to: 6.8
Change-Id: I444fb63093ae08ae37f1e5b2863fb19fc7bb240a
Reviewed-by: David Redondo <qt@david-redondo.de>
(cherry picked from commit f6cdb37f6df1bb52632cd18f8a9674dd6eb72ca7)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>